@@ -55,8 +55,7 @@ non-integer value 1e-3 qualified with L; using numeric value
 Warning message:
 integer literal 1.L contains unnecessary decimal point 
 > try(parse(text = "12iL")) # gives syntax error
-Error in parse(text = "12iL") : 
-  syntax error, unexpected SYMBOL, expecting '\n' or ';' in "12iL"
+Error in parse(text = "12iL") : unexpected symbol in "12iL"
 > 
 > 
 > all((0:6) == pi + ((-pi):pi))
